[tool.poetry]
name = "chess-canvas"
version = "0.1.0"
description = ""
authors = ["Krzysztof P <krzypluc@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_canvas"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
